# hakanai

./: .dockerignore  .gitignore  ;  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  REVIEW_REPORT.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_REPORT.md  docker-compose.yml  flake.nix  grafana-dashboard.json  hakanai-0.10.0.tgz  hakanai-0.10.1.tgz  hakanai-0.10.2.tgz  hakanai-0.10.3.tgz  hakanai-0.10.4.tgz  hakanai-0.11.0.tgz  hakanai-0.11.1.tgz  hakanai-0.11.2.tgz  hakanai-0.11.3.tgz  hakanai-0.11.4.tgz  hakanai-0.11.5.tgz  hakanai-0.11.6.tgz  hakanai-0.12.0.tgz  hakanai-0.12.1.tgz  hakanai-0.12.2.tgz  hakanai-0.12.3.tgz  hakanai-0.13.0.tgz  hakanai-0.13.1.tgz  hakanai-0.13.2.tgz  hakanai-0.13.3.tgz  hakanai-0.13.4.tgz  hakanai-0.14.0.tgz  hakanai-0.14.1.tgz  hakanai-0.14.2.tgz  (+53 more)
backend/: Cargo.toml
charts/: .gitkeep
cli/: Cargo.toml  package.nix
cli/src/: cli.rs  factory.rs  factory_mock.rs  get.rs  helper.rs  main.rs  mock_client.rs  observer.rs  send.rs  token.rs
cli/src/args/: get_args.rs  mod.rs  send_args.rs  token_args.rs
cli/src/utils/: mod.rs  size_parser.rs
docs/: API.md  CLI.md  CONFIGURATION.md  CUSTOMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  OBSERVABILITY.md  README.md  RESOLVED_REVIEW_ISSUES.md  RESOLVED_SECURITY_ISSUES.md  base64-encoding.md  shortcuts-README.md
lib/: Cargo.toml
lib/.claude/: settings.local.json
lib/src/: client.rs  client_mock.rs  crypto.rs  hash.rs  lib.rs  models.rs  observer.rs  options.rs  timestamp.rs  web.rs
lib/src/crypto/: aes.rs  crypto_context.rs  mock.rs  mod.rs
lib/src/models/: country_code.rs  errors.rs  mod.rs  payload.rs  restrictions.rs  secret.rs  token.rs
lib/src/utils/: content_analysis.rs  hashing.rs  human_size.rs  ip.rs  ip_parser.rs  ip_restrictions.rs  mod.rs  serde_utils.rs  size_parser.rs  test.rs  timestamp.rs
npm/: README.md  index.ts  package.json  tsconfig.json
server/: Cargo.toml  build.rs  package.nix
server/.claude/: settings.local.json
server/includes/: manifest.json  openapi.yaml  style.css
server/src/: admin_api.rs  admin_user.rs  api.rs  app_data.rs  data_store.rs  filters.rs  hakanai-client.js  hash.rs  ip_filter.rs  ip_whitelist.rs  main.rs  metrics.rs  metrics_observer.rs  observer.rs  options.rs  otel.rs  redis_client.rs  size_limit.rs  size_limited_json.rs  stats.rs  test_utils.rs  token.rs  user.rs  user_type.rs  web_api.rs  web_assets.rs  web_routes.rs  web_server.rs  web_static.rs  webhook_observer.rs
server/src/includes/: common-utils.js  common-utils.ts  create-secret.html  create-secret.js  docs.html  docs_generated.html  get-secret.html  get-secret.js  hakanai-client.js  hakanai-client.ts  i18n.js  ios-shortcuts.html  ios-shortcuts.js  manifest.json  openapi.json  robots.txt  style.css
server/src/includes/components/: success-display.js
server/src/includes/core/: auth-storage.js  clipboard.js  dom-utils.js  formatters.js  i18n.js  qr-generator.js  theme.js  types.js
server/src/includes/wasm/: hakanai_wasm.js  hakanai_wasm_bg.wasm
server/src/metrics/: event_metrics.rs  metrics_collector.rs  metrics_observer.rs  mod.rs
server/src/observer/: mock_observer.rs  mod.rs  observer_manager.rs  secret_event_context.rs  webhook_observer.rs
server/src/secret/: mock_secret_store.rs  mod.rs  redis_secret_store.rs  secret_store.rs
server/src/stats/: mod.rs  redis_stats_store.rs  secret_stats.rs  stats_observer.rs  stats_store.rs
server/src/templates/: create-secret.html  docs.html  get-secret.html  homepage.html  impressum.html  index.html  ios-shortcuts.html  privacy.html  share.html
server/src/templates/docs/: docs.html  endpoint.html  example-item.html  examples-header.html  property-example.html  schema-description.html  schema-property.html  status-code.html
server/src/templates/partials/: footer.html  head.html  header.html  language-selector.html  restrictions-tabs.html  scripts.html  theme-controls.html  ttl-selector.html
server/src/token/: mock_token_manager.rs  mock_token_store.rs  mod.rs  redis_token_store.rs  token_creator.rs  token_data.rs  token_error.rs  token_manager.rs  token_store.rs  token_validator.rs
server/src/typescript/: common-utils.ts  common.ts  create-secret.ts  docs.ts  get-secret.ts  hakanai-client.ts  homepage.ts  i18n.ts  ios-shortcuts.ts  share.ts  types.ts
server/src/typescript/client/: base64-utils.ts  browser-compat.ts  client.ts  content-analysis.ts  crypto-operations.ts  errors.ts  hakanai-client.ts  payload.ts  progress-observer.ts  secure-memory.ts  url-parser.ts  validation.ts
server/src/typescript/components/: create-result.ts  error-display.ts  file-dropzone.ts  progress-bar.ts  restrictions-tabs.ts  success-display.ts  ttl-selector.ts
server/src/typescript/core/: app-config.ts  auth-storage.ts  clipboard.ts  dom-utils.ts  error.ts  formatters.ts  i18n.ts  keyboard-shortcuts.ts  preferences.ts  qr-generator.ts  restriction-data.ts  share-data.ts  theme.ts  types.ts
server/src/web/: admin_api.rs  admin_user.rs  app_data.rs  filters.rs  mod.rs  size_limit.rs  size_limited_json.rs  user.rs  web_api.rs  web_assets.rs  web_routes.rs  web_server.rs
server/templates/: create-secret.html  docs.html  get-secret.html  impressum.html  index.html  one-time-token.html  privacy.html  share.html
server/templates/docs/: docs.html  endpoint.html  example-item.html  example-multiple.html  example-single.html  examples-header.html  property-example.html  request-body-header.html  schema-definition.html  schema-properties-header.html  schema-property.html  schema-reference.html  schema-section.html  status-code.html
server/templates/partials/: footer.html  head.html  header.html  restrictions-tabs.html  theme-switcher.html  ttl-selector.html
server/typescript/: common.ts
server/typescript/client/: browser-compat.ts  content-analysis.ts  hash-utils.ts
server/typescript/components/: file-dropzone.ts  progress-bar.ts
server/typescript/core/: error.ts
tests/: common-utils.test.ts  create-secret.test.ts  get-secret.test.ts  setup.js  (+8 more)
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+125 files in other folders)
