# SPDX-License-Identifier: Apache-2.0

[package]
name = "hakanai"
version = "2.20.2"
edition = "2024"
license = "Apache-2.0"
description = "CLI client for Hakanai, a secure secret sharing service."
readme = "../README.md"
repository = "https://github.com/czerwonk/hakanai"
homepage = "https://github.com/czerwonk/hakanai"
keywords = ["encryption", "secret", "sharing", "zero-knowledge", "privacy"]
categories = ["cryptography", "security", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
hakanai-lib = { workspace = true, features = ["testing"] }
humantime = "2.3.0"
indicatif = "0.18.3"
ipnet = { version = "2.11.0", features = ["serde"] }
qrcode = "0.14"
reqwest = { version = "0.13.1", features = ["json"] }
rpassword = "7.4.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.8"
zeroize = "1.8.2"
zip = "7.0.0"

[dev-dependencies]
tempfile = "3.24.0"
