[package]
name = "hakanai-lib"
version = "1.0.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.88"
base64 = "0.22.1"
rand = "0.9.1"
reqwest = { version = "0.12.22", optional = true, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_with = "3.14.0"
thiserror = "2.0.12"
url = { version = "2.5.4", optional = true }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["reqwest", "serde_json", "url"]
minimal = []
