# SPDX-License-Identifier: Apache-2.0

[package]
name = "hakanai-lib"
version = "2.10.7"
edition = "2024"
license = "Apache-2.0"
description = "Client library for Hakanai, a secure secret sharing service."
readme = "../README.md"
repository = "https://github.com/czerwonk/hakanai"
homepage = "https://github.com/czerwonk/hakanai"
documentation = "https://docs.rs/hakanai-lib"
keywords = ["encryption", "secret", "sharing", "zero-knowledge", "privacy"]
categories = ["cryptography", "web-programming", "command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
async-stream = { version = "0.3.6", optional = true }
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = { version = "1.10.1", optional = true }
ipnet = { version = "2.11.0", features = ["serde"] }
rand = "0.9.1"
reqwest = { version = "0.12.22", optional = true, features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_with = "3.14.0"
sha2 = "0.10.9"
thiserror = "2.0.12"
url = { version = "2.5.4", optional = true }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
zeroize = { version = "1.8.1", optional = true }

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["reqwest", "serde_json", "url", "bytes", "async-stream", "zeroize"]
minimal = []
testing = []
