# SPDX-License-Identifier: Apache-2.0

[package]
name = "hakanai-lib"
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Client library for Hakanai, a secure secret sharing service."
readme = "../README.md"
repository = "https://github.com/czerwonk/hakanai"
homepage = "https://github.com/czerwonk/hakanai"
documentation = "https://docs.rs/hakanai-lib"
keywords = ["encryption", "secret", "sharing", "zero-knowledge", "privacy"]
categories = ["cryptography", "security", "command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
async-stream = { version = "0.3.6", optional = true }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1.11.0", optional = true }
ipnet = { version = "2.11.0", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", optional = true, features = ["json", "stream"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
serde_with = "3.16.1"
sha2 = "0.10.9"
thiserror = "2.0.17"
ulid = { version = "1.2.1", features = ["serde"] }
url = { version = "2.5.8", optional = true }
uuid = "1.19.0"
zeroize = { version = "1.8.2", optional = true }

[dev-dependencies]
mockito = "1.7.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

[features]
default = ["reqwest", "serde_json", "url", "bytes", "async-stream", "zeroize"]
minimal = []
testing = []
