# SPDX-License-Identifier: Apache-2.0

[package]
name = "hakanai-server"
version = "2.19.2"
edition = "2024"
license = "Apache-2.0"
description = "Server for Hakanai, a secure secret sharing service."
readme = "../README.md"
repository = "https://github.com/czerwonk/hakanai"
homepage = "https://github.com/czerwonk/hakanai"
keywords = ["encryption", "secret", "sharing", "zero-knowledge", "privacy"]
categories = ["cryptography", "security"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive", "env"] }
futures-util = "0.3"
hakanai-lib = { workspace = true, features = ["minimal"] }
humantime = "2.3.0"
ipnet = "2.11.0"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-instrumentation-actix-web = { version = "0.23.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[build-dependencies]
anyhow = "1.0.100"
handlebars = "6.3.2"
serde_json = "1.0.145"

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.23.0"
