# SPDX-License-Identifier: Apache-2.0

[package]
name = "hakanai-server"
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Server for Hakanai, a secure secret sharing service."
readme = "../README.md"
repository = "https://github.com/czerwonk/hakanai"
homepage = "https://github.com/czerwonk/hakanai"
keywords = ["encryption", "secret", "sharing", "zero-knowledge", "privacy"]
categories = ["cryptography", "security"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
futures-util = "0.3"
hakanai-lib = { workspace = true, features = ["minimal"] }
humantime = "2.3.0"
ipnet = "2.11.0"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-instrumentation-actix-web = { version = "0.23.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.9.2"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.100"
handlebars = "6.4.0"
serde_json = "1.0.149"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.24.0"
