# SPDX-License-Identifier: Apache-2.0

[package]
name = "hakanai-wasm"
version = "2.14.0"
edition = "2024"
license = "Apache-2.0"
description = "WASM module for Hakanai QR code generation"
repository = "https://github.com/czerwonk/hakanai"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
qrcode = "0.14"
